--- a/public/css/core.css
+++ b/public/css/core.css
@@ -2637,9 +2637,14 @@ html {
 table {
   width: 100%;
   border-collapse: collapse;
+  border: none;
 }
 
 tr:nth-of-type(odd) {
+  background: #f5f5f5;
+}
+
+tr:hover {
   background: #eee;
 }
 
@@ -2651,8 +2656,8 @@ th {
 
 td, th {
   padding: 6px;
-  border: 1px solid #ccc;
   text-align: left;
+  border: none;
 }
 
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
